--- a/src/pages/equipment-info/equipment-info.scss
+++ b/src/pages/equipment-info/equipment-info.scss
@@ -1,3 +1,32 @@
 page-equipment-info {
-
+    .fs60{
+        font-size: 4em;
+    }
+    .fs80{
+        font-size: 5em;
+    }
+    h4,h6{
+        margin: 0;
+        padding: 0;
+    }
+    .equipment-header {
+        background-color: $ion-header-color;
+        h6{
+            margin-top:0.2rem;
+        }
+        .equipment-chart{
+            width: 100%;
+            height: 100%;
+            border-radius: 10px;
+            background-color: #404B51;
+            box-shadow: 0px 0px 5px rgba(255,255,255,0.5);
+        }   
+    }
+    .bb-item.item-ios{
+        padding: 0;
+    }
+    .bb-item .label-ios{
+        margin: 0 !important;
+    }
+    
 }
