--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,45 @@
 page-home {
-
+    h4{
+        margin: 0;
+    }
+    .floor-show{
+        position: absolute;
+        bottom:220px;
+        color: $ion-text-color;
+        background-color:$ion-header-color;
+        left: 20px;
+        width: 64px;
+        border: 1px solid rgba(255,255,255,0.3);
+        border-radius: 12px;
+        opacity: 0.9;
+        ul{ 
+            margin: 0;
+            padding: 0;
+        }
+        li{ 
+            list-style: none;
+            border-bottom: 1px solid #fff;
+            padding: 18px 0;
+        }
+        li:last-child{ 
+            border:none;
+        }
+    }
+    .info-show{
+        position:absolute;
+        bottom:40px;
+        left:50%; 
+        transform: translate(-50%, 0); 
+        width: 70%;
+        padding: 10px;
+        color: $ion-text-color;
+        background-color: #404B51;
+        border-radius: 4px;
+        opacity: 0.99;
+        box-shadow: 0px 0px 4px rgba(0,0,0,0.5);
+        transition: all .2s ease;
+        .mt-30{
+            margin-top: 30px !important;
+        }
+    }
 }
