修改存储方式文件需要存储再移动设备中

--- a/src/pages/equipment-info/equipment-info.scss
+++ b/src/pages/equipment-info/equipment-info.scss
@@ -1,8 +1,8 @@
 page-equipment-info {
-    .fs60{
+    .fs4em{
         font-size: 4em;
     }
-    .fs80{
+    .fs5em{
         font-size: 5em;
     }
     h4,h6{
